--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+tensorflow==2.11.0
 Flask==3.1.0
 gunicorn==20.1.0
 numpy==1.26.0
@@ -5,4 +6,3 @@ pandas==1.5.3
 scikit-learn==1.2.2
 h5py==3.12.1
 joblib==1.4.2
-
