--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ scikit-learn==1.2.2
 h5py==3.12.1
 joblib==1.4.2
 opencensus-ext-azure==1.1.14
-streamlit==1.24.0  # Version légèrement inférieure pour éviter conflit
-protobuf==3.20.3   # Version compatible avec TensorFlow et Streamlit
+streamlit==1.24.0  # Version compatible avec protobuf<3.20
+protobuf==3.19.6   # Compatible avec tensorflow-cpu
 requests==2.32.3
